--- a/src/assets/layout/_topbar.scss
+++ b/src/assets/layout/_topbar.scss
@@ -76,8 +76,10 @@
         margin-right: 0.5rem;
     }
 
-    .layout-topbar-menu-button {
-        display: none;
+    @media (min-width: 768px) {
+        .layout-menu-button {
+            display: none;
+        }
     }
 
     .layout-topbar-actions {
